# stamp

./: README  Stamp.hs  hello.stm  stamp.cabal
