cabal-version:      2.4
name:               stamp
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             defanor
maintainer:         defanor@thunix.net

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable stamp
    main-is:          Stamp.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.7 && < 5
                    , bytestring >= 0.10
                    , parsec >= 3 && < 4
                    , split >= 0.2 && < 1
    default-language: Haskell2010
